# new-soils-js

./: .gitignore  Cargo.toml  README.md  TODO.md  package-lock.json  package.json
.github/workflows/: screenshots.yml
crates/soils-client/: Cargo.toml
crates/soils-client/assets/shaders/: atlas.vert.glsl  atlas.wgsl  gi_blit.wgsl  gi_irradiance.wgsl  radiance.wgsl  voxel_mesh.wgsl
crates/soils-client/src/: actor.rs  chunk.rs  console.rs  edit.rs  gi.rs  gi_demo.rs  gpu_mesh.rs  hud.rs  indirect_draw.rs  light.rs  login.rs  main.rs  material.rs  net.rs  pause.rs  physics.rs  player.rs  server_msg.rs  singleplayer.rs
crates/soils-client/tests/: gi_gpu.rs  mesher_gpu.rs
crates/soils-physics/: Cargo.toml
crates/soils-physics/src/: collider.rs  lib.rs
crates/soils-protocol/: Cargo.toml
crates/soils-protocol/src/: chunk_codec.rs  coords.rs  lib.rs  messages.rs  snapshot.rs  voxel.rs
crates/soils-script/: Cargo.toml
crates/soils-script/src/: compile.rs  host.rs  lib.rs  tests.rs
crates/soils-script/tests/: asc_pipeline.rs
crates/soils-server/: Cargo.toml
crates/soils-server/examples/: editcheck.rs  msgcount.rs  peer.rs  smoke.rs
crates/soils-server/src/: app.rs  lib.rs  main.rs  persist.rs  region.rs  world.rs
crates/soils-server/tests/: discovery.rs  embedded.rs  movement.rs  movement_perf.rs  physics.rs  prediction.rs  robustness.rs  scenarios.rs  scripting.rs  streaming.rs  webtransport.rs
crates/soils-server/tests/common/: mod.rs
crates/soils-sim/: Cargo.toml  entities.yaml
crates/soils-sim/benches/: flood.rs
crates/soils-sim/src/: entities.rs  lib.rs  light.rs  nav.rs
crates/soils-terrainlab/: Cargo.toml
crates/soils-terrainlab/src/: canvas.rs  graph_model.rs  main.rs  node.rs  node_preview.rs  preview3d.rs  wgsl_gen.rs
crates/soils-terrainlab/tests/: gpu_codegen.rs
crates/soils-worldgen/: Cargo.toml
crates/soils-worldgen/benches/: terrain.rs
crates/soils-worldgen/src/: blocks.rs  graph.rs  greedy.rs  lib.rs  terrain.rs
docs/: analysis.md  architecture.md  perf-report.md  plan-game-systems.md  plan-rendering.md
new-soils-rs/: .gitignore  Cargo.toml  README.md
new-soils-rs/crates/soils-client/: Cargo.toml
new-soils-rs/crates/soils-client/assets/shaders/: atlas.frag.glsl  atlas.wgsl  radiance.wgsl
new-soils-rs/crates/soils-client/src/: actor.rs  chunk.rs  console.rs  discovery.rs  edit.rs  gi.rs  gi_demo.rs  gpu_mesh.rs  login.rs  main.rs  material.rs  mesh.rs  net.rs  pause.rs  player.rs  singleplayer.rs
new-soils-rs/crates/soils-client/tests/: gi_gpu.rs
new-soils-rs/crates/soils-protocol/src/: discovery.rs  lib.rs  messages.rs
new-soils-rs/crates/soils-server/: Cargo.toml
new-soils-rs/crates/soils-server/examples/: editcheck.rs  peer.rs  smoke.rs
new-soils-rs/crates/soils-server/src/: auth.rs  lib.rs  main.rs  region.rs  world.rs
new-soils-rs/crates/soils-server/tests/: discovery.rs  embedded.rs
new-soils-rs/crates/soils-worldgen/: Cargo.toml  blocks.yaml
new-soils-rs/crates/soils-worldgen/src/: blocks.rs  greedy.rs  lib.rs  radiance.rs  terrain.rs
scripts/: README.md  asconfig.json  example.ts  soils.ts
server/: cron.yaml  jsconfig.json  package-lock.json  package.json  server.js
server/public/: admin.html  index.html  randotest.html  test.html  ui_test.html  voxels.html
server/public/files/: blocks.yaml
server/public/img/: wood-button.psd
server/public/js/: EdgeShader2.js  EffectComposer.js  PointerLockControls.js  RenderPass.js  SSAOShader.js  SkyShader.js  blocks.js  buffer.min.js  index.js  jquery-ui.min.js  mesher_worker.js  ui.js  voxels.js
server/public/style/: jquery-ui.min.css  ui.css
