[workspace]
resolver = "3"
members = [
    "crates/soils-protocol",
    "crates/soils-sim",
    "crates/soils-worldgen",
    "crates/soils-server",
    "crates/soils-client",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
soils-protocol = { path = "crates/soils-protocol" }
soils-sim = { path = "crates/soils-sim" }
soils-worldgen = { path = "crates/soils-worldgen" }
soils-server = { path = "crates/soils-server" }
serde = { version = "1", features = ["derive"] }
bincode = "2"
# Kept in lockstep with the glam version Bevy re-exports, so sim/protocol math
# types flow into client code without array bridging.
glam = "0.30"

# Keep debug builds snappy for the deep dependency graph (bevy).
[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
# Pure-compute members on hot paths (light floods, sim stepping, codecs):
# at opt-level 1 a single chunk light flood costs ~300 ms and stalls the
# server tick (and client burst frames); opt-level 3 makes dev behave.
[profile.dev.package.soils-sim]
opt-level = 3
[profile.dev.package.soils-protocol]
opt-level = 3
[profile.dev.package.soils-worldgen]
opt-level = 3
# The server's LightWorld impl is the per-cell callback layer of the flood —
# it must be optimized along with the flood itself.
[profile.dev.package.soils-server]
opt-level = 3
