[workspace]
resolver = "3"
members = [
    "crates/soils-protocol",
    "crates/soils-sim",
    "crates/soils-worldgen",
    "crates/soils-physics",
    "crates/soils-server",
    "crates/soils-client",
    "crates/soils-terrainlab",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
soils-protocol = { path = "crates/soils-protocol" }
soils-sim = { path = "crates/soils-sim" }
soils-worldgen = { path = "crates/soils-worldgen" }
soils-physics = { path = "crates/soils-physics" }
soils-server = { path = "crates/soils-server" }
serde = { version = "1", features = ["derive"] }
bincode = "2"
# 3D rigid-body physics (Avian). 0.6.1 is the last release tracking bevy 0.18
# (0.7 needs bevy 0.19). default-features off to drop `parallel` — a
# single-threaded, deterministic step keeps client prediction/rollback
# re-simulation matching the original run; `enhanced-determinism` shrinks drift.
avian3d = { version = "0.6.1", default-features = false, features = [
    "3d",
    "f32",
    "parry-f32",
    "default-collider",
    "enhanced-determinism",
] }
# Kept in lockstep with the glam version Bevy re-exports, so sim/protocol math
# types flow into client code without array bridging.
glam = "0.30"

# Keep debug builds snappy for the deep dependency graph (bevy).
[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
# Pure-compute members on hot paths (light floods, sim stepping, codecs):
# at opt-level 1 a single chunk light flood costs ~300 ms and stalls the
# server tick (and client burst frames); opt-level 3 makes dev behave.
[profile.dev.package.soils-sim]
opt-level = 3
[profile.dev.package.soils-protocol]
opt-level = 3
[profile.dev.package.soils-worldgen]
opt-level = 3
# The server's LightWorld impl is the per-cell callback layer of the flood —
# it must be optimized along with the flood itself.
[profile.dev.package.soils-server]
opt-level = 3
