[package]
name = "soils-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
soils-protocol = { workspace = true }
soils-sim = { workspace = true }
soils-worldgen = { workspace = true }
soils-server = { workspace = true }
soils-physics = { workspace = true }
avian3d = { workspace = true }
bevy = "0.18"
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
wtransport = { version = "0.7.1", features = ["dangerous-configuration"] }

[dev-dependencies]
# Headless GPU test: run the radiance-cascades compute shader on a real device
# (no window/surface) and compare its output against the CPU oracle.
wgpu = "27"
pollster = "0.4"
bytemuck = "1"
