[package]
name = "soils-script"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Cranelift JIT + WAT parsing (default features). Runs modules produced by the
# AssemblyScript `asc` compiler, or precompiled `.wasm`/`.wat` directly.
wasmtime = "38"
anyhow = "1"

[dev-dependencies]
# Deterministic scalar ABI needs no extra harness; tests use inline WAT modules.
