[package]
name = "soils-sim"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
soils-protocol = { workspace = true }
soils-worldgen = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
serde_yaml = "0.9"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "flood"
harness = false
