[package]
name = "soils-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
soils-protocol = { workspace = true }
soils-worldgen = { workspace = true }
soils-server = { workspace = true }
bevy = "0.18"
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
