[package]
name = "soils-worldgen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
soils-protocol = { workspace = true }
glam = { workspace = true }
noise = "0.9"
serde = { workspace = true }
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
